terraform/modules/security-groups/main.tf
############################################
# ALB Security Group
############################################

resource "aws_security_group" "alb" {

  name = "${var.project_name}-${var.environment}-alb-sg"

  description = "ALB Security Group"

  vpc_id = var.vpc_id

  ingress {

    from_port = 80

    to_port = 80

    protocol = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  ingress {

    from_port = 443

    to_port = 443

    protocol = "tcp"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-alb-sg"
  }
}

############################################
# EKS Worker Nodes
############################################

resource "aws_security_group" "eks_nodes" {

  name = "${var.project_name}-${var.environment}-eks-node-sg"

  description = "EKS Worker Node Security Group"

  vpc_id = var.vpc_id

  ingress {

    from_port = 0

    to_port = 65535

    protocol = "tcp"

    self = true
  }

  ingress {

    from_port = 80

    to_port = 80

    protocol = "tcp"

    security_groups = [
      aws_security_group.alb.id
    ]
  }

  ingress {

    from_port = 443

    to_port = 443

    protocol = "tcp"

    security_groups = [
      aws_security_group.alb.id
    ]
  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-eks-node-sg"
  }
}

############################################
# PostgreSQL
############################################

resource "aws_security_group" "postgres" {

  name = "${var.project_name}-${var.environment}-postgres-sg"

  description = "PostgreSQL Security Group"

  vpc_id = var.vpc_id

  ingress {

    from_port = 5432

    to_port = 5432

    protocol = "tcp"

    security_groups = [
      aws_security_group.eks_nodes.id
    ]
  }

  egress {

    from_port = 0

    to_port = 0

    protocol = "-1"

    cidr_blocks = [
      "0.0.0.0/0"
    ]
  }

  tags = {
    Name = "${var.project_name}-${var.environment}-postgres-sg"
  }
}
